<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_home" tools:context=".home"
    android:id="@+id/relatLayout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="140dp"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:id="@+id/right_layout"
        android:weightSum="1">

        <Chronometer
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chronometer"
            android:gravity="center_horizontal"
            android:textSize="32sp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etEmployeeName"
            android:hint="@string/employee_name_hint"
            android:textAlignment="center" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/workingOn_label"
            android:id="@+id/twLabelWorkingOn"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:autoText="false"
            android:gravity="center_horizontal"
            android:clickable="false" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_nothing"
            android:id="@+id/twTaskMessage_area"
            android:gravity="center_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_text"
            android:id="@+id/btnStartStop"
            android:singleLine="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/interruption_text"
            android:id="@+id/btnInterruption"
            style="?android:attr/buttonStyleSmall"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/right_layout"
        android:layout_toEndOf="@+id/right_layout"
        android:layout_alignParentTop="true"
        android:id="@+id/left_layout"
        android:weightSum="1">

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/lwTasks"
            android:layout_weight="0.90"
            android:focusableInTouchMode="false" />

    </LinearLayout>

</RelativeLayout>
